# CI-CD-TEST

./: .gitignore  CMakeLists.txt  deploy.sh
.github/workflows/: deploy.yml  docker-image.yml
build_configurations/Aquamaper/: Config.cmake
build_configurations/P24/: Config.cmake  complects_list.txt
build_configurations/X-cam/: Config.cmake
build_configurations/Xpd22-hdmi/: complects_list.txt
x-port_PSDKv3/: CMakeLists.txt  common.h  deploy.sh  f420.c  getdata.c  lic.txt  power.c  pu.c  start.sh
x-port_PSDKv3/Complects/Aquamaper/: CMakeLists.txt  app_info.h  camera.c  cammedia.c  cap2.c  constants.h  main.c  test_widget.c
x-port_PSDKv3/Complects/Aquamaper/widget/: widget_config.json
x-port_PSDKv3/Complects/Sony/: camera.c  cammedia.c  cap2.c  constants.h  main.c  test_widget.c
x-port_PSDKv3/Complects/Sony/etc/systemd/system/: x-port.service
x-port_PSDKv3/Complects/Sony/widget/: widget_config.json
x-port_PSDKv3/Complects/X-cam/: camera.c  cammedia.c  cap2.c  constants.h  main.c  test_widget.c
x-port_PSDKv3/Complects/X-cam/widget/: widget_config.json
x-port_PSDKv3/Complects/Xpd22-hdmi/: CMakeLists.txt  camera.c  cammedia.c  cap2.c  constants.h  main.c  x-pd22.service  xpd22s.sh
x-port_PSDKv3/Complects/Xpd22-hdmi/etc/systemd/system/: x-port.service
x-port_PSDKv3/hal/: hal_network.h  hal_uart.c
x-port_PSDKv3/osal/: osal.c
x-port_PSDKv3/utils/: util_misc.c
